--- a/CookPopularControl/Themes/CookColors/LightColor.xaml
+++ b/CookPopularControl/Themes/CookColors/LightColor.xaml
@@ -5,15 +5,15 @@
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/CookColors/BaseColor.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Color x:Key="PrimaryThemeColor">#F0F0F0</Color>
+    <Color x:Key="PrimaryThemeColor">#E0E0E0</Color>
     <Color x:Key="AssistantThemeColor">#563535</Color>
     <SolidColorBrush x:Key="PrimaryThemeBrush" Color="{StaticResource PrimaryThemeColor}" />
     <SolidColorBrush x:Key="AssistantThemeBrush" Color="{StaticResource AssistantThemeColor}" />
     <SolidColorBrush x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type Brush}, ResourceId=PrimaryThemeBrush}" Color="{StaticResource PrimaryThemeColor}" />
 
     <Color x:Key="BorderBrushColor">#808080</Color>
-    <Color x:Key="ControlMouseOverColor">#E0E0E0</Color>
-    <Color x:Key="ControlPressColor">#C0C0C0</Color>
+    <Color x:Key="ControlMouseOverColor">#C0C0C0</Color>
+    <Color x:Key="ControlPressColor">#D0D0D0</Color>
     <SolidColorBrush x:Key="BorderBrush" Color="{x:Static SystemColors.ControlDarkColor}" />
     <SolidColorBrush x:Key="ControlMouseOverBackground" Color="{StaticResource ControlMouseOverColor}" />
     <SolidColorBrush x:Key="ControlPressBackground" Color="{StaticResource ControlPressColor}" />
