--- a/MvvmTestDemo/DemoViews/PropertyGridDemo.xaml
+++ b/MvvmTestDemo/DemoViews/PropertyGridDemo.xaml
@@ -10,7 +10,7 @@
              d:DesignWidth="800" 
              DataContext="{Binding RelativeSource={RelativeSource Self}}">
 
-    <StackPanel Margin="50,20" VerticalAlignment="Top">
+    <StackPanel Margin="50,20" VerticalAlignment="Center">
         <!--<Path Width="20" Height="20" Stretch="Uniform"
               Data="{StaticResource CategoryGeometry}" Fill="Red"/>-->
 
