--- a/CookPopularControl/Themes/BaseStyle/CheckBoxBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/CheckBoxBaseStyle.xaml
@@ -8,8 +8,8 @@
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BaseStyle/ControlBaseStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Style x:Key="CheckBoxBaseStyle" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource SingleControlBaseStyle}">
-        <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />
+    <Style x:Key="CheckBoxBaseStyle" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource FixedControlBaseStyle}">
+        <Setter Property="Height" Value="{DynamicResource DefaultControlHeight}" />
         <Setter Property="Padding" Value="6,0,0,0" />
         <Setter Property="HorizontalContentAlignment" Value="Left" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
