--- a/CookPopularControl/Themes/ListViewStyle.xaml
+++ b/CookPopularControl/Themes/ListViewStyle.xaml
@@ -255,7 +255,7 @@
         </Style.Triggers>
     </Style>
 
-    <Style x:Key="ListViewGirdViewStyle" TargetType="{x:Type ListView}" BasedOn="{StaticResource DefaultListBoxStyle}">
+    <Style x:Key="ListViewGridViewStyle" TargetType="{x:Type ListView}" BasedOn="{StaticResource DefaultListBoxStyle}">
         <Setter Property="ItemContainerStyle" Value="{StaticResource ListViewGridViewItemStyle}" />
         <Setter Property="common:DataGridViewAttached.ColumnHeaderHeight" Value="30" />
         <Setter Property="common:DataGridViewAttached.ColumnHeaderPadding" Value="4,0,0,0" />
