--- a/CookPopularControl/Resources/Dictionaries/FontFamily.xaml
+++ b/CookPopularControl/Resources/Dictionaries/FontFamily.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <FontFamily x:Key="RobotoFonts">pack://application:,,,/CookPopularControl;component/Resources/Fonts/Roboto/#Roboto</FontFamily>
+    <FontFamily x:Key="InterFonts">pack://application:,,,/CookPopularControl;component/Resources/Fonts/Inter/#Inter</FontFamily>
     <FontFamily x:Key="WindowIcons">pack://application:,,,/CookPopularControl;component/Resources/Fonts/WindowIcons/#iconfont</FontFamily>
 
 </ResourceDictionary>
