--- a/CookPopularControl/Themes/BaseStyle/ComboBoxBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/ComboBoxBaseStyle.xaml
@@ -5,7 +5,7 @@
                     xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BaseStyle/ListBoxItemBaseStyle.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BaseStyle/ListBoxBaseStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <!--  下拉按钮  -->
@@ -90,7 +90,7 @@
         </Setter>
     </Style>
 
-    <Style x:Key="ComnoBoxItemStyle" TargetType="{x:Type ComboBoxItem}" BasedOn="{StaticResource ListBoxItemStyle}">
+    <Style x:Key="ComboBoxItemStyle" TargetType="{x:Type ComboBoxItem}" BasedOn="{StaticResource ListBoxItemStyle}">
         <Setter Property="Width" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ComboBox}}, Path=Width}" />
         <Setter Property="Height" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ComboBox}}, Path=Height}" />
         <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ComboBox}}, Path=Foreground}" />
@@ -103,7 +103,7 @@
         <Setter Property="Stylus.IsFlicksEnabled" Value="False" />
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto" />
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
-        <Setter Property="ItemContainerStyle" Value="{StaticResource ComnoBoxItemStyle}" />
+        <Setter Property="ItemContainerStyle" Value="{StaticResource ComboBoxItemStyle}" />
         <Setter Property="pc:RippleAssist.IsDisabled" Value="False" />
         <Setter Property="pc:RippleAssist.Feedback" Value="{DynamicResource RippleFeedback}" />
         <!--<Setter Property="ItemContainerStyle">
@@ -185,11 +185,11 @@
                                      IsHitTestVisible="{TemplateBinding IsEditable}"
                                      IsReadOnly="{TemplateBinding IsReadOnly}"
                                      Style="{StaticResource ComboBoxEditableTextBox}" />
-                            <ContentPresenter Content="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=Content}"
+                            <!--<ContentPresenter Content="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=Content}"
                                               Margin="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ComboBox}}, Path=Padding}"
                                               HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                               VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                              IsHitTestVisible="False" />
+                                              IsHitTestVisible="False" />-->
                             <WrapPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
                                 <Button x:Name="PART_ClearButton"
                                         Foreground="{TemplateBinding pc:ComboBoxAssistant.DropDownButtonFill}"
@@ -233,9 +233,8 @@
                                     </Border.RenderTransform>
                                     <ScrollViewer x:Name="DropDownScorllViewer"
                                                   MaxHeight="{TemplateBinding MaxDropDownHeight}"
-                                                  Margin="0,0,0,0" SnapsToDevicePixels="True"
-                                                  CacheMode="{DynamicResource DefaultBitmapCache}"
-                                                  CanContentScroll="True" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+                                                  Background="Transparent"
+                                                  CanContentScroll="True" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto">
                                         <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Contained" />
                                         <!--<ItemsPresenter KeyboardNavigation.DirectionalNavigation="Contained" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>-->
                                     </ScrollViewer>
@@ -268,6 +267,7 @@
     <!--  MultiComboBox  -->
     <Style x:Key="MultiComboBoxBaseStyle" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxBaseStyle}">
         <Setter Property="pc:RippleAssist.IsDisabled" Value="False" />
+        <Setter Property="pc:CheckBoxAssistant.FillBrush" Value="{DynamicResource ControlForegroundBrush}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ComboBox}">
@@ -369,6 +369,7 @@
                                              common:SelectorAttached.ItemControlHeight="{TemplateBinding common:SelectorAttached.ItemControlHeight}"
                                              common:SelectorAttached.ItemControlWidth="{TemplateBinding common:SelectorAttached.ItemControlWidth}"
                                              common:SelectorAttached.SelectorItemType="{TemplateBinding common:SelectorAttached.SelectorItemType}"
+                                             pc:CheckBoxAssistant.FillBrush="{TemplateBinding pc:CheckBoxAssistant.FillBrush}"
                                              pc:RippleAssist.Feedback="{TemplateBinding pc:RippleAssist.Feedback}"
                                              pc:RippleAssist.IsDisabled="{TemplateBinding pc:RippleAssist.IsDisabled}"
                                              ItemTemplate="{TemplateBinding ItemTemplate}"
