--- a/CookPopularControl/Themes/ScrollBarStyle.xaml
+++ b/CookPopularControl/Themes/ScrollBarStyle.xaml
@@ -13,25 +13,26 @@
         <Setter Property="OverridesDefaultStyle" Value="true" />
         <Setter Property="Focusable" Value="True" />
         <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ScrollBar}, Path=Foreground}" />
+        <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ScrollBar}, Path=Background}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type RepeatButton}">
-                    <Grid>
-                        <Border x:Name="RepeatButtonBorder"
-                                Background="{TemplateBinding Foreground}"
-                                CornerRadius="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ScrollBar}, Path=(common:FrameworkElementBaseAttached.CornerRadius)}"
-                                Opacity="0.45" />
+                    <pc:SimpleGrid>
+                        <Border x:Name="RepeatButtonBorder" Background="{TemplateBinding Background}" CornerRadius="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ScrollBar}, Path=(common:FrameworkElementBaseAttached.CornerRadius)}" />
                         <Path x:Name="Arrow"
                               Data="{Binding Content, RelativeSource={RelativeSource TemplatedParent}}"
-                              Fill="{TemplateBinding Foreground}"
-                              Stretch="UniformToFill"
-                              HorizontalAlignment="Center" VerticalAlignment="Center" />
-                    </Grid>
+                              Opacity="0.6"
+                              HorizontalAlignment="Center" VerticalAlignment="Center"
+                              Stroke="{DynamicResource PrimaryForegroundBrush}"
+                              StrokeThickness="2" />
+                    </pc:SimpleGrid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Opacity" Value="0.8" TargetName="Arrow" />
                             <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ScrollBar}, Path=(common:FrameworkElementBaseAttached.ControlMouseOverBackground)}" TargetName="RepeatButtonBorder" />
                         </Trigger>
                         <Trigger Property="IsPressed" Value="True">
+                            <Setter Property="Opacity" Value="0.9" TargetName="Arrow" />
                             <!--<Setter Property="pc:ScrollBarAssistant.IsExecuteCommand" Value="True" />-->
                             <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ScrollBar}, Path=(common:FrameworkElementBaseAttached.ControlPressBackground)}" TargetName="RepeatButtonBorder" />
                         </Trigger>
@@ -84,12 +85,13 @@
     <ControlTemplate x:Key="ScrollBarHorizontal" TargetType="{x:Type ScrollBar}">
         <Grid x:Name="TemplateRootGird" Opacity="0.6">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" MaxWidth="{DynamicResource {x:Static SystemParameters.HorizontalScrollBarButtonWidth}}" />
+                <ColumnDefinition Width="Auto" MaxWidth="{DynamicResource {x:Static SystemParameters.HorizontalScrollBarButtonWidthKey}}" />
                 <ColumnDefinition Width="0.00001*" />
-                <ColumnDefinition Width="Auto" MaxWidth="{DynamicResource {x:Static SystemParameters.HorizontalScrollBarButtonWidth}}" />
+                <ColumnDefinition Width="Auto" MaxWidth="{DynamicResource {x:Static SystemParameters.HorizontalScrollBarButtonWidthKey}}" />
             </Grid.ColumnDefinitions>
             <RepeatButton x:Name="LineLeftButton" Grid.Column="0"
-                          Content="M 4 0 L 4 8 L 0 4 Z"
+                          Width="{x:Static SystemParameters.HorizontalScrollBarButtonWidth}"
+                          Content="M 5 0 L 0 5 L 5 10"
                           Command="{x:Static ScrollBar.LineLeftCommand}"
                           IsEnabled="{TemplateBinding IsMouseOver}"
                           Visibility="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(pc:ScrollBarAssistant.IsShowScrollBarRepeatButton), Converter={pt:BooleanToVisibilityConverter}}"
@@ -113,7 +115,8 @@
                 </Track.DecreaseRepeatButton>
             </Track>
             <RepeatButton x:Name="LineRightButton" Grid.Column="2"
-                          Content="M 0 0 L 4 4 L 0 8 Z"
+                          Width="{x:Static SystemParameters.HorizontalScrollBarButtonWidth}"
+                          Content="M 0 0 L 5 5 L 0 10"
                           Command="{x:Static ScrollBar.LineRightCommand}"
                           IsEnabled="{TemplateBinding IsMouseOver}"
                           Visibility="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(pc:ScrollBarAssistant.IsShowScrollBarRepeatButton), Converter={pt:BooleanToVisibilityConverter}}"
@@ -139,12 +142,13 @@
     <ControlTemplate x:Key="ScrollBarVertical" TargetType="{x:Type ScrollBar}">
         <Grid x:Name="TemplateRootGird" Opacity="0.6">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" MaxHeight="{DynamicResource {x:Static SystemParameters.VerticalScrollBarButtonHeight}}" />
+                <RowDefinition Height="Auto" MaxHeight="{DynamicResource {x:Static SystemParameters.VerticalScrollBarButtonHeightKey}}" />
                 <RowDefinition Height="0.00001*" />
-                <RowDefinition Height="Auto" MaxHeight="{DynamicResource {x:Static SystemParameters.VerticalScrollBarButtonHeight}}" />
+                <RowDefinition Height="Auto" MaxHeight="{DynamicResource {x:Static SystemParameters.VerticalScrollBarButtonHeightKey}}" />
             </Grid.RowDefinitions>
             <RepeatButton x:Name="LineUpButton" Grid.Row="0"
-                          Content="M 0 4 L 8 4 L 4 0 Z"
+                          Height="{x:Static SystemParameters.VerticalScrollBarButtonHeight}"
+                          Content="M 0 5 L 5 0 L 10 5"
                           Command="{x:Static ScrollBar.LineUpCommand}"
                           IsEnabled="{TemplateBinding IsMouseOver}"
                           Visibility="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(pc:ScrollBarAssistant.IsShowScrollBarRepeatButton), Converter={pt:BooleanToVisibilityConverter}}"
@@ -168,7 +172,8 @@
                 </Track.IncreaseRepeatButton>
             </Track>
             <RepeatButton x:Name="LineDownButton" Grid.Row="2"
-                          Content="M 0 0 L 4 4 L 8 0 Z"
+                          Height="{x:Static SystemParameters.VerticalScrollBarButtonHeight}"
+                          Content="M 0 0 L 5 5 L 10 0"
                           Command="{x:Static ScrollBar.LineDownCommand}"
                           IsEnabled="{TemplateBinding IsMouseOver}"
                           Visibility="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(pc:ScrollBarAssistant.IsShowScrollBarRepeatButton), Converter={pt:BooleanToVisibilityConverter}}"
@@ -192,7 +197,8 @@
     </ControlTemplate>
 
     <Style x:Key="DefaultScrollBarStyle" TargetType="{x:Type ScrollBar}">
-        <Setter Property="Foreground" Value="{DynamicResource PrimaryThemeBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />
+        <Setter Property="Background" Value="{DynamicResource PrimaryThemeBrush}" />
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="OverridesDefaultStyle" Value="True" />
